--- a/public/css/app.css
+++ b/public/css/app.css
@@ -637,6 +637,9 @@ input[type="radio"]:checked ~ .box .circle{
 .right-10{
   right: 2.5rem;
 }
+.bottom-5{
+  bottom: 1.25rem;
+}
 .z-\[-1\]{
   z-index: -1;
 }
@@ -645,6 +648,9 @@ input[type="radio"]:checked ~ .box .circle{
 }
 .z-50{
   z-index: 50;
+}
+.-m-1{
+  margin: -0.25rem;
 }
 .my-\[6px\]{
   margin-top: 6px;
@@ -669,6 +675,10 @@ input[type="radio"]:checked ~ .box .circle{
 .mx-1{
   margin-left: 0.25rem;
   margin-right: 0.25rem;
+}
+.mx-5{
+  margin-left: 1.25rem;
+  margin-right: 1.25rem;
 }
 .ml-20{
   margin-left: 5rem;
@@ -730,6 +740,15 @@ input[type="radio"]:checked ~ .box .circle{
 .mb-0{
   margin-bottom: 0px;
 }
+.mt-5{
+  margin-top: 1.25rem;
+}
+.mb-\[60px\]{
+  margin-bottom: 60px;
+}
+.mb-2{
+  margin-bottom: 0.5rem;
+}
 .block{
   display: block;
 }
@@ -790,6 +809,9 @@ input[type="radio"]:checked ~ .box .circle{
 .w-12{
   width: 3rem;
 }
+.w-1\/3{
+  width: 33.333333%;
+}
 .min-w-\[300px\]{
   min-width: 300px;
 }
@@ -814,6 +836,9 @@ input[type="radio"]:checked ~ .box .circle{
 .max-w-\[300px\]{
   max-width: 300px;
 }
+.max-w-\[510px\]{
+  max-width: 510px;
+}
 .-translate-y-1\/2{
   --tw-translate-y: -50%;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
@@ -823,6 +848,51 @@ input[type="radio"]:checked ~ .box .circle{
 }
 .resize-none{
   resize: none;
+}
+.scroll-m-2\.5{
+  scroll-margin: 0.625rem;
+}
+.scroll-m-2{
+  scroll-margin: 0.5rem;
+}
+.scroll-mb-5{
+  scroll-margin-bottom: 1.25rem;
+}
+.-scroll-mb-10{
+  scroll-margin-bottom: -2.5rem;
+}
+.scroll-p-3{
+  scroll-padding: 0.75rem;
+}
+.scroll-p-5{
+  scroll-padding: 1.25rem;
+}
+.scroll-p-10{
+  scroll-padding: 2.5rem;
+}
+.scroll-p-12{
+  scroll-padding: 3rem;
+}
+.scroll-p-11{
+  scroll-padding: 2.75rem;
+}
+.scroll-p-14{
+  scroll-padding: 3.5rem;
+}
+.scroll-p-16{
+  scroll-padding: 4rem;
+}
+.scroll-p-20{
+  scroll-padding: 5rem;
+}
+.scroll-pb-10{
+  scroll-padding-bottom: 2.5rem;
+}
+.scroll-pb-96{
+  scroll-padding-bottom: 24rem;
+}
+.scroll-pb-48{
+  scroll-padding-bottom: 12rem;
 }
 .flex-wrap{
   flex-wrap: wrap;
@@ -841,6 +911,9 @@ input[type="radio"]:checked ~ .box .circle{
 }
 .overflow-hidden{
   overflow: hidden;
+}
+.scroll-smooth{
+  scroll-behavior: smooth;
 }
 .rounded-lg{
   border-radius: 0.5rem;
@@ -920,14 +993,22 @@ input[type="radio"]:checked ~ .box .circle{
 .bg-\[url\(\'\/img\/omnietlo_test\.jpg\'\)\]{
   background-image: url('/img/omnietlo_test.jpg');
 }
-.bg-\[url\(\'\/img\/omnietlo_test2\.jpg\'\)\]{
-  background-image: url('/img/omnietlo_test2.jpg');
-}
 .fill-current{
   fill: currentColor;
 }
+.object-cover{
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+.object-center{
+  -o-object-position: center;
+     object-position: center;
+}
 .p-8{
   padding: 2rem;
+}
+.p-1{
+  padding: 0.25rem;
 }
 .px-3{
   padding-left: 0.75rem;
@@ -989,6 +1070,10 @@ input[type="radio"]:checked ~ .box .circle{
   padding-top: 2rem;
   padding-bottom: 2rem;
 }
+.px-5{
+  padding-left: 1.25rem;
+  padding-right: 1.25rem;
+}
 .pt-\[60px\]{
   padding-top: 60px;
 }
@@ -1025,6 +1110,9 @@ input[type="radio"]:checked ~ .box .circle{
 .pb-16{
   padding-bottom: 4rem;
 }
+.pt-2{
+  padding-top: 0.5rem;
+}
 .text-center{
   text-align: center;
 }
@@ -1049,8 +1137,8 @@ input[type="radio"]:checked ~ .box .circle{
 .text-lg{
   font-size: 1.25rem;
 }
-.text-2xl{
-  font-size: 1.875rem;
+.text-sm{
+  font-size: 1rem;
 }
 .font-bold{
   font-weight: 700;
@@ -1694,6 +1782,23 @@ input[type="radio"]:checked ~ .box span{
   --tw-text-opacity: 1;
   color: rgb(172 218 41 / var(--tw-text-opacity));
 }
+.hover\:opacity-25:hover{
+  opacity: 0.25;
+}
+.hover\:opacity-10:hover{
+  opacity: 0.1;
+}
+.hover\:opacity-60:hover{
+  opacity: 0.6;
+}
+.hover\:opacity-80:hover{
+  opacity: 0.8;
+}
+.hover\:shadow:hover{
+  --tw-shadow: 0 1px 3px 0 rgb(0 0 0 / 0.1), 0 1px 2px -1px rgb(0 0 0 / 0.1);
+  --tw-shadow-colored: 0 1px 3px 0 var(--tw-shadow-color), 0 1px 2px -1px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
 .focus\:border-red-500:focus{
   --tw-border-opacity: 1;
   border-color: rgb(239 68 68 / var(--tw-border-opacity));
@@ -1832,6 +1937,10 @@ input[type="radio"]:checked ~ .box span{
 }
 @media (min-width: 720px){
 
+  .md\:-m-2{
+    margin: -0.5rem;
+  }
+
   .md\:flex{
     display: flex;
   }
@@ -1860,6 +1969,10 @@ input[type="radio"]:checked ~ .box span{
     padding: 1.75rem;
   }
 
+  .md\:p-2{
+    padding: 0.5rem;
+  }
+
   .md\:px-9{
     padding-left: 2.25rem;
     padding-right: 2.25rem;
@@ -1867,6 +1980,10 @@ input[type="radio"]:checked ~ .box span{
 
   .md\:text-xl{
     font-size: 1.5rem;
+  }
+
+  .md\:text-\[40px\]{
+    font-size: 40px;
   }
 }
 @media (min-width: 960px){
@@ -1974,6 +2091,11 @@ input[type="radio"]:checked ~ .box span{
     padding-right: 0px;
   }
 
+  .lg\:px-32{
+    padding-left: 8rem;
+    padding-right: 8rem;
+  }
+
   .lg\:pt-\[80px\]{
     padding-top: 80px;
   }
@@ -2004,6 +2126,10 @@ input[type="radio"]:checked ~ .box span{
 
   .lg\:pl-\[120px\]{
     padding-left: 120px;
+  }
+
+  .lg\:pt-12{
+    padding-top: 3rem;
   }
 
   .lg\:text-right{
@@ -2056,6 +2182,10 @@ input[type="radio"]:checked ~ .box span{
 
   .xl\:w-8\/12{
     width: 66.666667%;
+  }
+
+  .xl\:w-1\/4{
+    width: 25%;
   }
 
   .xl\:p-9{
