--- a/public/css/app.css
+++ b/public/css/app.css
@@ -426,6 +426,10 @@ input[type="radio"]:checked ~ .box .circle{
   color: #3056D3;
 }
 
+.download-radio:checked ~ label .icon{
+  opacity: 1;
+}
+
 .autoSaverSwitch input:checked ~ .label .on{
   display: block;
 }
@@ -442,6 +446,27 @@ input[type="radio"]:checked ~ .box .circle{
 .themeSwitcherThree input:checked ~ div .dark{
   background: #3056D3;
   color: #fff;
+}
+
+.checkbox-list:checked ~ label .icon{
+  opacity: 1;
+}
+
+.box-select-1:checked ~ label .box .icon{
+  opacity: 1;
+}
+
+.select-list:checked ~ label .icon{
+  background: #3056d3;
+}
+
+.tableCheckbox:checked ~ label .icon{
+  opacity: 1;
+}
+
+.tableCheckbox-2:checked ~ label .icon{
+  color: #fff;
+  opacity: 1;
 }
 
 *, ::before, ::after{
@@ -637,9 +662,6 @@ input[type="radio"]:checked ~ .box .circle{
 .right-10{
   right: 2.5rem;
 }
-.bottom-5{
-  bottom: 1.25rem;
-}
 .z-\[-1\]{
   z-index: -1;
 }
@@ -648,9 +670,6 @@ input[type="radio"]:checked ~ .box .circle{
 }
 .z-50{
   z-index: 50;
-}
-.-m-1{
-  margin: -0.25rem;
 }
 .my-\[6px\]{
   margin-top: 6px;
@@ -676,10 +695,6 @@ input[type="radio"]:checked ~ .box .circle{
   margin-left: 0.25rem;
   margin-right: 0.25rem;
 }
-.mx-5{
-  margin-left: 1.25rem;
-  margin-right: 1.25rem;
-}
 .ml-20{
   margin-left: 5rem;
 }
@@ -704,6 +719,9 @@ input[type="radio"]:checked ~ .box .circle{
 .mb-1{
   margin-bottom: 0.25rem;
 }
+.mb-\[60px\]{
+  margin-bottom: 60px;
+}
 .mt-\[-7px\]{
   margin-top: -7px;
 }
@@ -725,11 +743,11 @@ input[type="radio"]:checked ~ .box .circle{
 .mt-10{
   margin-top: 2.5rem;
 }
-.mt-2{
-  margin-top: 0.5rem;
-}
 .mb-10{
   margin-bottom: 2.5rem;
+}
+.mt-2{
+  margin-top: 0.5rem;
 }
 .mb-7{
   margin-bottom: 1.75rem;
@@ -739,15 +757,6 @@ input[type="radio"]:checked ~ .box .circle{
 }
 .mb-0{
   margin-bottom: 0px;
-}
-.mt-5{
-  margin-top: 1.25rem;
-}
-.mb-\[60px\]{
-  margin-bottom: 60px;
-}
-.mb-2{
-  margin-bottom: 0.5rem;
 }
 .block{
   display: block;
@@ -809,9 +818,6 @@ input[type="radio"]:checked ~ .box .circle{
 .w-12{
   width: 3rem;
 }
-.w-1\/3{
-  width: 33.333333%;
-}
 .min-w-\[300px\]{
   min-width: 300px;
 }
@@ -833,11 +839,11 @@ input[type="radio"]:checked ~ .box .circle{
 .max-w-\[60px\]{
   max-width: 60px;
 }
-.max-w-\[300px\]{
-  max-width: 300px;
-}
 .max-w-\[510px\]{
   max-width: 510px;
+}
+.max-w-\[300px\]{
+  max-width: 300px;
 }
 .-translate-y-1\/2{
   --tw-translate-y: -50%;
@@ -849,50 +855,8 @@ input[type="radio"]:checked ~ .box .circle{
 .resize-none{
   resize: none;
 }
-.scroll-m-2\.5{
-  scroll-margin: 0.625rem;
-}
-.scroll-m-2{
-  scroll-margin: 0.5rem;
-}
-.scroll-mb-5{
-  scroll-margin-bottom: 1.25rem;
-}
-.-scroll-mb-10{
-  scroll-margin-bottom: -2.5rem;
-}
-.scroll-p-3{
-  scroll-padding: 0.75rem;
-}
-.scroll-p-5{
-  scroll-padding: 1.25rem;
-}
-.scroll-p-10{
-  scroll-padding: 2.5rem;
-}
-.scroll-p-12{
-  scroll-padding: 3rem;
-}
-.scroll-p-11{
-  scroll-padding: 2.75rem;
-}
-.scroll-p-14{
-  scroll-padding: 3.5rem;
-}
-.scroll-p-16{
-  scroll-padding: 4rem;
-}
 .scroll-p-20{
   scroll-padding: 5rem;
-}
-.scroll-pb-10{
-  scroll-padding-bottom: 2.5rem;
-}
-.scroll-pb-96{
-  scroll-padding-bottom: 24rem;
-}
-.scroll-pb-48{
-  scroll-padding-bottom: 12rem;
 }
 .flex-wrap{
   flex-wrap: wrap;
@@ -996,19 +960,8 @@ input[type="radio"]:checked ~ .box .circle{
 .fill-current{
   fill: currentColor;
 }
-.object-cover{
-  -o-object-fit: cover;
-     object-fit: cover;
-}
-.object-center{
-  -o-object-position: center;
-     object-position: center;
-}
 .p-8{
   padding: 2rem;
-}
-.p-1{
-  padding: 0.25rem;
 }
 .px-3{
   padding-left: 0.75rem;
@@ -1070,10 +1023,6 @@ input[type="radio"]:checked ~ .box .circle{
   padding-top: 2rem;
   padding-bottom: 2rem;
 }
-.px-5{
-  padding-left: 1.25rem;
-  padding-right: 1.25rem;
-}
 .pt-\[60px\]{
   padding-top: 60px;
 }
@@ -1083,11 +1032,14 @@ input[type="radio"]:checked ~ .box .circle{
 .pt-11{
   padding-top: 2.75rem;
 }
-.pr-4{
-  padding-right: 1rem;
-}
 .pt-20{
   padding-top: 5rem;
+}
+.pb-10{
+  padding-bottom: 2.5rem;
+}
+.pr-4{
+  padding-right: 1rem;
 }
 .pb-12{
   padding-bottom: 3rem;
@@ -1098,9 +1050,6 @@ input[type="radio"]:checked ~ .box .circle{
 .pt-10{
   padding-top: 2.5rem;
 }
-.pb-10{
-  padding-bottom: 2.5rem;
-}
 .pt-5{
   padding-top: 1.25rem;
 }
@@ -1109,9 +1058,6 @@ input[type="radio"]:checked ~ .box .circle{
 }
 .pb-16{
   padding-bottom: 4rem;
-}
-.pt-2{
-  padding-top: 0.5rem;
 }
 .text-center{
   text-align: center;
@@ -1136,9 +1082,6 @@ input[type="radio"]:checked ~ .box .circle{
 }
 .text-lg{
   font-size: 1.25rem;
-}
-.text-sm{
-  font-size: 1rem;
 }
 .font-bold{
   font-weight: 700;
@@ -1782,23 +1725,6 @@ input[type="radio"]:checked ~ .box span{
   --tw-text-opacity: 1;
   color: rgb(172 218 41 / var(--tw-text-opacity));
 }
-.hover\:opacity-25:hover{
-  opacity: 0.25;
-}
-.hover\:opacity-10:hover{
-  opacity: 0.1;
-}
-.hover\:opacity-60:hover{
-  opacity: 0.6;
-}
-.hover\:opacity-80:hover{
-  opacity: 0.8;
-}
-.hover\:shadow:hover{
-  --tw-shadow: 0 1px 3px 0 rgb(0 0 0 / 0.1), 0 1px 2px -1px rgb(0 0 0 / 0.1);
-  --tw-shadow-colored: 0 1px 3px 0 var(--tw-shadow-color), 0 1px 2px -1px var(--tw-shadow-color);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-}
 .focus\:border-red-500:focus{
   --tw-border-opacity: 1;
   border-color: rgb(239 68 68 / var(--tw-border-opacity));
@@ -1816,37 +1742,6 @@ input[type="radio"]:checked ~ .box span{
   --tw-shadow: 0 0 #0000;
   --tw-shadow-colored: 0 0 #0000;
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-}
-@media (prefers-color-scheme: dark){
-
-  .dark\:hidden{
-    display: none;
-  }
-
-  .dark\:border-white{
-    --tw-border-opacity: 1;
-    border-color: rgb(255 255 255 / var(--tw-border-opacity));
-  }
-
-  .dark\:bg-slate-800{
-    --tw-bg-opacity: 1;
-    background-color: rgb(30 41 59 / var(--tw-bg-opacity));
-  }
-
-  .dark\:bg-slate-900{
-    --tw-bg-opacity: 1;
-    background-color: rgb(15 23 42 / var(--tw-bg-opacity));
-  }
-
-  .dark\:text-white{
-    --tw-text-opacity: 1;
-    color: rgb(255 255 255 / var(--tw-text-opacity));
-  }
-
-  .hover\:dark\:border-primary:hover{
-    --tw-border-opacity: 1;
-    border-color: rgb(172 218 41 / var(--tw-border-opacity));
-  }
 }
 @media (min-width: 400px){
 
@@ -1919,12 +1814,12 @@ input[type="radio"]:checked ~ .box span{
     font-size: 40px;
   }
 
-  .sm\:text-\[38px\]{
-    font-size: 38px;
-  }
-
   .sm\:text-4xl{
     font-size: 3rem;
+  }
+
+  .sm\:text-\[38px\]{
+    font-size: 38px;
   }
 
   .sm\:text-\[22px\]{
@@ -1936,10 +1831,6 @@ input[type="radio"]:checked ~ .box span{
   }
 }
 @media (min-width: 720px){
-
-  .md\:-m-2{
-    margin: -0.5rem;
-  }
 
   .md\:flex{
     display: flex;
@@ -1969,21 +1860,17 @@ input[type="radio"]:checked ~ .box span{
     padding: 1.75rem;
   }
 
-  .md\:p-2{
-    padding: 0.5rem;
-  }
-
   .md\:px-9{
     padding-left: 2.25rem;
     padding-right: 2.25rem;
   }
 
-  .md\:text-xl{
-    font-size: 1.5rem;
-  }
-
   .md\:text-\[40px\]{
     font-size: 40px;
+  }
+
+  .md\:text-xl{
+    font-size: 1.5rem;
   }
 }
 @media (min-width: 960px){
@@ -2091,11 +1978,6 @@ input[type="radio"]:checked ~ .box span{
     padding-right: 0px;
   }
 
-  .lg\:px-32{
-    padding-left: 8rem;
-    padding-right: 8rem;
-  }
-
   .lg\:pt-\[80px\]{
     padding-top: 80px;
   }
@@ -2108,6 +1990,10 @@ input[type="radio"]:checked ~ .box span{
     padding-top: 120px;
   }
 
+  .lg\:pb-20{
+    padding-bottom: 5rem;
+  }
+
   .lg\:pb-\[90px\]{
     padding-bottom: 90px;
   }
@@ -2116,20 +2002,12 @@ input[type="radio"]:checked ~ .box span{
     padding-top: 60px;
   }
 
-  .lg\:pb-20{
-    padding-bottom: 5rem;
-  }
-
   .lg\:pb-\[120px\]{
     padding-bottom: 120px;
   }
 
   .lg\:pl-\[120px\]{
     padding-left: 120px;
-  }
-
-  .lg\:pt-12{
-    padding-top: 3rem;
   }
 
   .lg\:text-right{
@@ -2176,16 +2054,16 @@ input[type="radio"]:checked ~ .box span{
     width: 50%;
   }
 
+  .xl\:w-1\/4{
+    width: 25%;
+  }
+
   .xl\:w-1\/3{
     width: 33.333333%;
   }
 
   .xl\:w-8\/12{
     width: 66.666667%;
-  }
-
-  .xl\:w-1\/4{
-    width: 25%;
   }
 
   .xl\:p-9{
