--- a/public/css/app.css
+++ b/public/css/app.css
@@ -758,6 +758,24 @@ input[type="radio"]:checked ~ .box .circle{
 .mb-0{
   margin-bottom: 0px;
 }
+.ml-1{
+  margin-left: 0.25rem;
+}
+.mt-8{
+  margin-top: 2rem;
+}
+.ml-12{
+  margin-left: 3rem;
+}
+.-mt-px{
+  margin-top: -1px;
+}
+.mt-1{
+  margin-top: 0.25rem;
+}
+.mt-0{
+  margin-top: 0px;
+}
 .block{
   display: block;
 }
@@ -772,6 +790,9 @@ input[type="radio"]:checked ~ .box .circle{
 }
 .table{
   display: table;
+}
+.grid{
+  display: grid;
 }
 .hidden{
   display: none;
@@ -793,6 +814,18 @@ input[type="radio"]:checked ~ .box .circle{
 }
 .h-12{
   height: 3rem;
+}
+.h-5{
+  height: 1.25rem;
+}
+.h-8{
+  height: 2rem;
+}
+.h-16{
+  height: 4rem;
+}
+.h-14{
+  height: 3.5rem;
 }
 .max-h-64{
   max-height: 16rem;
@@ -817,6 +850,21 @@ input[type="radio"]:checked ~ .box .circle{
 }
 .w-12{
   width: 3rem;
+}
+.w-5{
+  width: 1.25rem;
+}
+.w-8{
+  width: 2rem;
+}
+.w-auto{
+  width: auto;
+}
+.w-16{
+  width: 4rem;
+}
+.w-14{
+  width: 3.5rem;
 }
 .min-w-\[300px\]{
   min-width: 300px;
@@ -845,6 +893,12 @@ input[type="radio"]:checked ~ .box .circle{
 .max-w-\[300px\]{
   max-width: 300px;
 }
+.max-w-xl{
+  max-width: 36rem;
+}
+.max-w-6xl{
+  max-width: 72rem;
+}
 .-translate-y-1\/2{
   --tw-translate-y: -50%;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
@@ -857,6 +911,9 @@ input[type="radio"]:checked ~ .box .circle{
 }
 .scroll-p-20{
   scroll-padding: 5rem;
+}
+.grid-cols-1{
+  grid-template-columns: repeat(1, minmax(0, 1fr));
 }
 .flex-wrap{
   flex-wrap: wrap;
@@ -899,6 +956,12 @@ input[type="radio"]:checked ~ .box .circle{
 }
 .border-2{
   border-width: 2px;
+}
+.border-t{
+  border-top-width: 1px;
+}
+.border-r{
+  border-right-width: 1px;
 }
 .border-lime-500{
   --tw-border-opacity: 1;
@@ -957,11 +1020,17 @@ input[type="radio"]:checked ~ .box .circle{
 .bg-\[url\(\'\/img\/omnietlo_test\.jpg\'\)\]{
   background-image: url('/img/omnietlo_test.jpg');
 }
+.bg-\[url\(\'\/img\/TlozBialym\.jpg\'\)\]{
+  background-image: url('/img/TlozBialym.jpg');
+}
 .fill-current{
   fill: currentColor;
 }
 .p-8{
   padding: 2rem;
+}
+.p-6{
+  padding: 1.5rem;
 }
 .px-3{
   padding-left: 0.75rem;
@@ -1059,8 +1128,29 @@ input[type="radio"]:checked ~ .box .circle{
 .pb-16{
   padding-bottom: 4rem;
 }
+.pt-2{
+  padding-top: 0.5rem;
+}
+.pt-12{
+  padding-top: 3rem;
+}
+.pt-14{
+  padding-top: 3.5rem;
+}
+.pt-16{
+  padding-top: 4rem;
+}
+.pt-6{
+  padding-top: 1.5rem;
+}
+.pt-32{
+  padding-top: 8rem;
+}
 .text-center{
   text-align: center;
+}
+.text-justify{
+  text-align: justify;
 }
 .text-4xl{
   font-size: 3rem;
@@ -1082,6 +1172,12 @@ input[type="radio"]:checked ~ .box .circle{
 }
 .text-lg{
   font-size: 1.25rem;
+}
+.text-sm{
+  font-size: 1rem;
+}
+.text-2xl{
+  font-size: 1.875rem;
 }
 .font-bold{
   font-weight: 700;
@@ -1116,6 +1212,9 @@ input[type="radio"]:checked ~ .box .circle{
 .leading-relaxed{
   line-height: 1.625;
 }
+.leading-7{
+  line-height: 1.75rem;
+}
 .tracking-wider{
   letter-spacing: 0.05em;
 }
@@ -1146,6 +1245,9 @@ input[type="radio"]:checked ~ .box .circle{
 .text-lime-500{
   --tw-text-opacity: 1;
   color: rgb(132 204 22 / var(--tw-text-opacity));
+}
+.underline{
+  text-decoration-line: underline;
 }
 .antialiased{
   -webkit-font-smoothing: antialiased;
@@ -1752,6 +1854,10 @@ input[type="radio"]:checked ~ .box span{
   .xs\:max-w-\[368px\]{
     max-width: 368px;
   }
+
+  .xs\:text-xs{
+    font-size: .875rem;
+  }
 }
 @media (min-width: 540px){
 
@@ -1784,6 +1890,14 @@ input[type="radio"]:checked ~ .box span{
     max-width: 508px;
   }
 
+  .sm\:items-center{
+    align-items: center;
+  }
+
+  .sm\:justify-start{
+    justify-content: flex-start;
+  }
+
   .sm\:p-12{
     padding: 3rem;
   }
@@ -1804,6 +1918,15 @@ input[type="radio"]:checked ~ .box span{
   .sm\:py-4{
     padding-top: 1rem;
     padding-bottom: 1rem;
+  }
+
+  .sm\:px-6{
+    padding-left: 1.5rem;
+    padding-right: 1.5rem;
+  }
+
+  .sm\:pt-0{
+    padding-top: 0px;
   }
 
   .sm\:text-\[42px\]{
@@ -1828,6 +1951,10 @@ input[type="radio"]:checked ~ .box span{
 
   .sm\:text-lg{
     font-size: 1.25rem;
+  }
+
+  .sm\:text-sm{
+    font-size: 1rem;
   }
 }
 @media (min-width: 720px){
@@ -1903,6 +2030,10 @@ input[type="radio"]:checked ~ .box span{
     margin-left: 1.5rem;
   }
 
+  .lg\:mt-4{
+    margin-top: 1rem;
+  }
+
   .lg\:block{
     display: block;
   }
@@ -1976,6 +2107,11 @@ input[type="radio"]:checked ~ .box span{
   .lg\:px-0{
     padding-left: 0px;
     padding-right: 0px;
+  }
+
+  .lg\:px-8{
+    padding-left: 2rem;
+    padding-right: 2rem;
   }
 
   .lg\:pt-\[80px\]{
