--- a/public/css/app.css
+++ b/public/css/app.css
@@ -438,9 +438,19 @@ input[type="radio"]:checked ~ .box .circle{
   display: none;
 }
 
+.themeSwitcherTwo input:checked ~ .light{
+  background: transparent;
+  color: #637381;
+}
+
 .themeSwitcherTwo input:checked ~ .dark{
   color: #3056D3;
   background: #f4f7ff;
+}
+
+.themeSwitcherThree input:checked ~ div .light{
+  background: #fff;
+  color: #637381;
 }
 
 .themeSwitcherThree input:checked ~ div .dark{
@@ -679,6 +689,10 @@ input[type="radio"]:checked ~ .box .circle{
   margin-left: auto;
   margin-right: auto;
 }
+.my-24{
+  margin-top: 6rem;
+  margin-bottom: 6rem;
+}
 .-mx-4{
   margin-left: -1rem;
   margin-right: -1rem;
@@ -710,8 +724,14 @@ input[type="radio"]:checked ~ .box .circle{
 .mb-4{
   margin-bottom: 1rem;
 }
+.mb-32{
+  margin-bottom: 8rem;
+}
 .mb-12{
   margin-bottom: 3rem;
+}
+.mr-2{
+  margin-right: 0.5rem;
 }
 .mr-6{
   margin-right: 1.5rem;
@@ -734,9 +754,6 @@ input[type="radio"]:checked ~ .box .circle{
 .ml-4{
   margin-left: 1rem;
 }
-.mr-2{
-  margin-right: 0.5rem;
-}
 .mr-4{
   margin-right: 1rem;
 }
@@ -752,12 +769,6 @@ input[type="radio"]:checked ~ .box .circle{
 .mb-7{
   margin-bottom: 1.75rem;
 }
-.mb-11{
-  margin-bottom: 2.75rem;
-}
-.mb-0{
-  margin-bottom: 0px;
-}
 .ml-1{
   margin-left: 0.25rem;
 }
@@ -770,11 +781,17 @@ input[type="radio"]:checked ~ .box .circle{
 .-mt-px{
   margin-top: -1px;
 }
-.mt-1{
-  margin-top: 0.25rem;
+.mb-11{
+  margin-bottom: 2.75rem;
 }
-.mt-0{
-  margin-top: 0px;
+.mb-0{
+  margin-bottom: 0px;
+}
+.ml-6{
+  margin-left: 1.5rem;
+}
+.ml-8{
+  margin-left: 2rem;
 }
 .block{
   display: block;
@@ -800,20 +817,17 @@ input[type="radio"]:checked ~ .box .circle{
 .h-\[2px\]{
   height: 2px;
 }
+.h-full{
+  height: 100%;
+}
+.h-4{
+  height: 1rem;
+}
 .h-\[60px\]{
   height: 60px;
 }
 .h-10{
   height: 2.5rem;
-}
-.h-full{
-  height: 100%;
-}
-.h-auto{
-  height: auto;
-}
-.h-12{
-  height: 3rem;
 }
 .h-5{
   height: 1.25rem;
@@ -824,8 +838,17 @@ input[type="radio"]:checked ~ .box .circle{
 .h-16{
   height: 4rem;
 }
+.h-auto{
+  height: auto;
+}
 .h-14{
   height: 3.5rem;
+}
+.h-\[1px\]{
+  height: 1px;
+}
+.h-1\/2{
+  height: 50%;
 }
 .max-h-64{
   max-height: 16rem;
@@ -833,23 +856,23 @@ input[type="radio"]:checked ~ .box .circle{
 .min-h-screen{
   min-height: 100vh;
 }
+.min-h-\[350px\]{
+  min-height: 350px;
+}
 .w-\[30px\]{
   width: 30px;
 }
 .w-full{
   width: 100%;
 }
+.w-4{
+  width: 1rem;
+}
 .w-\[300px\]{
   width: 300px;
 }
 .w-10{
   width: 2.5rem;
-}
-.w-\[10px\]{
-  width: 10px;
-}
-.w-12{
-  width: 3rem;
 }
 .w-5{
   width: 1.25rem;
@@ -860,14 +883,26 @@ input[type="radio"]:checked ~ .box .circle{
 .w-auto{
   width: auto;
 }
-.w-16{
-  width: 4rem;
+.w-\[10px\]{
+  width: 10px;
 }
 .w-14{
   width: 3.5rem;
 }
+.w-80{
+  width: 20rem;
+}
+.w-1\/6{
+  width: 16.666667%;
+}
+.w-1\/2{
+  width: 50%;
+}
 .min-w-\[300px\]{
   min-width: 300px;
+}
+.min-w-\[160px\]{
+  min-width: 160px;
 }
 .max-w-screen-xl{
   max-width: 1140px;
@@ -890,14 +925,17 @@ input[type="radio"]:checked ~ .box .circle{
 .max-w-\[510px\]{
   max-width: 510px;
 }
-.max-w-\[300px\]{
-  max-width: 300px;
-}
 .max-w-xl{
   max-width: 36rem;
 }
 .max-w-6xl{
   max-width: 72rem;
+}
+.max-w-\[300px\]{
+  max-width: 300px;
+}
+.table-auto{
+  table-layout: auto;
 }
 .-translate-y-1\/2{
   --tw-translate-y: -50%;
@@ -911,6 +949,9 @@ input[type="radio"]:checked ~ .box .circle{
 }
 .scroll-p-20{
   scroll-padding: 5rem;
+}
+.list-inside{
+  list-style-position: inside;
 }
 .grid-cols-1{
   grid-template-columns: repeat(1, minmax(0, 1fr));
@@ -930,8 +971,14 @@ input[type="radio"]:checked ~ .box .circle{
 .justify-between{
   justify-content: space-between;
 }
+.gap-6{
+  gap: 1.5rem;
+}
 .overflow-hidden{
   overflow: hidden;
+}
+.overflow-x-auto{
+  overflow-x: auto;
 }
 .scroll-smooth{
   scroll-behavior: smooth;
@@ -957,11 +1004,17 @@ input[type="radio"]:checked ~ .box .circle{
 .border-2{
   border-width: 2px;
 }
+.border-b{
+  border-bottom-width: 1px;
+}
 .border-t{
   border-top-width: 1px;
 }
 .border-r{
   border-right-width: 1px;
+}
+.border-l{
+  border-left-width: 1px;
 }
 .border-lime-500{
   --tw-border-opacity: 1;
@@ -981,6 +1034,14 @@ input[type="radio"]:checked ~ .box .circle{
 .border-dark{
   --tw-border-opacity: 1;
   border-color: rgb(9 14 52 / var(--tw-border-opacity));
+}
+.border-green-800{
+  --tw-border-opacity: 1;
+  border-color: rgb(22 101 52 / var(--tw-border-opacity));
+}
+.border-\[\#E8E8E8\]{
+  --tw-border-opacity: 1;
+  border-color: rgb(232 232 232 / var(--tw-border-opacity));
 }
 .bg-body-color{
   --tw-bg-opacity: 1;
@@ -1002,6 +1063,13 @@ input[type="radio"]:checked ~ .box .circle{
   --tw-bg-opacity: 1;
   background-color: rgb(22 101 52 / var(--tw-bg-opacity));
 }
+.bg-transparent{
+  background-color: transparent;
+}
+.bg-blue-600{
+  --tw-bg-opacity: 1;
+  background-color: rgb(37 99 235 / var(--tw-bg-opacity));
+}
 .bg-\[\#F3F4F6\]{
   --tw-bg-opacity: 1;
   background-color: rgb(243 244 246 / var(--tw-bg-opacity));
@@ -1014,23 +1082,24 @@ input[type="radio"]:checked ~ .box .circle{
   --tw-bg-opacity: 1;
   background-color: rgb(228 228 228 / var(--tw-bg-opacity));
 }
+.bg-\[\#F3F6FF\]{
+  --tw-bg-opacity: 1;
+  background-color: rgb(243 246 255 / var(--tw-bg-opacity));
+}
 .bg-opacity-5{
   --tw-bg-opacity: 0.05;
 }
 .bg-\[url\(\'\/img\/omnietlo_test\.jpg\'\)\]{
   background-image: url('/img/omnietlo_test.jpg');
 }
-.bg-\[url\(\'\/img\/TlozBialym\.jpg\'\)\]{
-  background-image: url('/img/TlozBialym.jpg');
-}
 .fill-current{
   fill: currentColor;
 }
-.p-8{
-  padding: 2rem;
-}
 .p-6{
   padding: 1.5rem;
+}
+.p-8{
+  padding: 2rem;
 }
 .px-3{
   padding-left: 0.75rem;
@@ -1068,13 +1137,17 @@ input[type="radio"]:checked ~ .box .circle{
   padding-left: 3rem;
   padding-right: 3rem;
 }
-.py-20{
-  padding-top: 5rem;
-  padding-bottom: 5rem;
+.py-2\.5{
+  padding-top: 0.625rem;
+  padding-bottom: 0.625rem;
 }
 .py-2{
   padding-top: 0.5rem;
   padding-bottom: 0.5rem;
+}
+.py-20{
+  padding-top: 5rem;
+  padding-bottom: 5rem;
 }
 .py-5{
   padding-top: 1.25rem;
@@ -1095,8 +1168,8 @@ input[type="radio"]:checked ~ .box .circle{
 .pt-\[60px\]{
   padding-top: 60px;
 }
-.pt-8{
-  padding-top: 2rem;
+.pt-24{
+  padding-top: 6rem;
 }
 .pt-11{
   padding-top: 2.75rem;
@@ -1113,38 +1186,20 @@ input[type="radio"]:checked ~ .box .circle{
 .pb-12{
   padding-bottom: 3rem;
 }
-.pt-24{
-  padding-top: 6rem;
-}
 .pt-10{
   padding-top: 2.5rem;
 }
 .pt-5{
   padding-top: 1.25rem;
 }
+.pt-8{
+  padding-top: 2rem;
+}
 .pb-20{
   padding-bottom: 5rem;
 }
 .pb-16{
   padding-bottom: 4rem;
-}
-.pt-2{
-  padding-top: 0.5rem;
-}
-.pt-12{
-  padding-top: 3rem;
-}
-.pt-14{
-  padding-top: 3.5rem;
-}
-.pt-16{
-  padding-top: 4rem;
-}
-.pt-6{
-  padding-top: 1.5rem;
-}
-.pt-32{
-  padding-top: 8rem;
 }
 .text-center{
   text-align: center;
@@ -1155,11 +1210,20 @@ input[type="radio"]:checked ~ .box .circle{
 .text-4xl{
   font-size: 3rem;
 }
+.text-2xl{
+  font-size: 1.875rem;
+}
 .text-base{
   font-size: 1.125rem;
 }
 .text-xs{
   font-size: .875rem;
+}
+.text-3xl{
+  font-size: 2.25rem;
+}
+.text-sm{
+  font-size: 1rem;
 }
 .text-\[32px\]{
   font-size: 32px;
@@ -1167,17 +1231,8 @@ input[type="radio"]:checked ~ .box .circle{
 .text-xl{
   font-size: 1.5rem;
 }
-.text-3xl{
-  font-size: 2.25rem;
-}
 .text-lg{
   font-size: 1.25rem;
-}
-.text-sm{
-  font-size: 1rem;
-}
-.text-2xl{
-  font-size: 1.875rem;
 }
 .font-bold{
   font-weight: 700;
@@ -1185,11 +1240,11 @@ input[type="radio"]:checked ~ .box .circle{
 .font-normal{
   font-weight: 400;
 }
-.font-semibold{
-  font-weight: 600;
-}
 .font-medium{
   font-weight: 500;
+}
+.font-semibold{
+  font-weight: 600;
 }
 .uppercase{
   text-transform: uppercase;
@@ -1206,11 +1261,11 @@ input[type="radio"]:checked ~ .box .circle{
 .leading-tight{
   line-height: 1.25;
 }
-.leading-loose{
-  line-height: 2;
-}
 .leading-relaxed{
   line-height: 1.625;
+}
+.leading-loose{
+  line-height: 2;
 }
 .leading-7{
   line-height: 1.75rem;
@@ -1234,6 +1289,14 @@ input[type="radio"]:checked ~ .box .circle{
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
+.text-blue-600{
+  --tw-text-opacity: 1;
+  color: rgb(37 99 235 / var(--tw-text-opacity));
+}
+.text-green-600{
+  --tw-text-opacity: 1;
+  color: rgb(22 163 74 / var(--tw-text-opacity));
+}
 .text-primary{
   --tw-text-opacity: 1;
   color: rgb(172 218 41 / var(--tw-text-opacity));
@@ -1245,6 +1308,10 @@ input[type="radio"]:checked ~ .box .circle{
 .text-lime-500{
   --tw-text-opacity: 1;
   color: rgb(132 204 22 / var(--tw-text-opacity));
+}
+.text-green-800{
+  --tw-text-opacity: 1;
+  color: rgb(22 101 52 / var(--tw-text-opacity));
 }
 .underline{
   text-decoration-line: underline;
@@ -1295,6 +1362,12 @@ input[type="radio"]:checked ~ .box .circle{
   transition-property: all;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   transition-duration: 150ms;
+}
+.duration-150{
+  transition-duration: 150ms;
+}
+.ease-in-out{
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 body {
@@ -1816,6 +1889,10 @@ input[type="radio"]:checked ~ .box span{
   --tw-bg-opacity: 1;
   background-color: rgb(63 98 18 / var(--tw-bg-opacity));
 }
+.hover\:bg-blue-700:hover{
+  --tw-bg-opacity: 1;
+  background-color: rgb(29 78 216 / var(--tw-bg-opacity));
+}
 .hover\:bg-opacity-80:hover{
   --tw-bg-opacity: 0.8;
 }
@@ -1823,9 +1900,18 @@ input[type="radio"]:checked ~ .box span{
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
+.hover\:text-blue-700:hover{
+  --tw-text-opacity: 1;
+  color: rgb(29 78 216 / var(--tw-text-opacity));
+}
 .hover\:text-primary:hover{
   --tw-text-opacity: 1;
   color: rgb(172 218 41 / var(--tw-text-opacity));
+}
+.hover\:shadow-lg:hover{
+  --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
+  --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 .focus\:border-red-500:focus{
   --tw-border-opacity: 1;
@@ -1835,14 +1921,41 @@ input[type="radio"]:checked ~ .box span{
   --tw-border-opacity: 1;
   border-color: rgb(172 218 41 / var(--tw-border-opacity));
 }
+.focus\:bg-blue-700:focus{
+  --tw-bg-opacity: 1;
+  background-color: rgb(29 78 216 / var(--tw-bg-opacity));
+}
+.focus\:shadow-lg:focus{
+  --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
+  --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+.focus\:outline-none:focus{
+  outline: 2px solid transparent;
+  outline-offset: 2px;
+}
 .focus\:ring-2:focus{
   --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
   --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(2px + var(--tw-ring-offset-width)) var(--tw-ring-color);
   box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
 }
+.focus\:ring-0:focus{
+  --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
+  --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(0px + var(--tw-ring-offset-width)) var(--tw-ring-color);
+  box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
+}
 .focus-visible\:shadow-none:focus-visible{
   --tw-shadow: 0 0 #0000;
   --tw-shadow-colored: 0 0 #0000;
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+.active\:bg-blue-800:active{
+  --tw-bg-opacity: 1;
+  background-color: rgb(30 64 175 / var(--tw-bg-opacity));
+}
+.active\:shadow-lg:active{
+  --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
+  --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 @media (min-width: 400px){
@@ -1853,10 +1966,6 @@ input[type="radio"]:checked ~ .box span{
 
   .xs\:max-w-\[368px\]{
     max-width: 368px;
-  }
-
-  .xs\:text-xs{
-    font-size: .875rem;
   }
 }
 @media (min-width: 540px){
@@ -2030,10 +2139,6 @@ input[type="radio"]:checked ~ .box span{
     margin-left: 1.5rem;
   }
 
-  .lg\:mt-4{
-    margin-top: 1rem;
-  }
-
   .lg\:block{
     display: block;
   }
@@ -2082,6 +2187,18 @@ input[type="radio"]:checked ~ .box span{
     max-width: 738px;
   }
 
+  .lg\:grid-cols-3{
+    grid-template-columns: repeat(3, minmax(0, 1fr));
+  }
+
+  .lg\:grid-cols-2{
+    grid-template-columns: repeat(2, minmax(0, 1fr));
+  }
+
+  .lg\:grid-cols-1{
+    grid-template-columns: repeat(1, minmax(0, 1fr));
+  }
+
   .lg\:items-center{
     align-items: center;
   }
@@ -2092,6 +2209,11 @@ input[type="radio"]:checked ~ .box span{
 
   .lg\:justify-between{
     justify-content: space-between;
+  }
+
+  .lg\:gap-x-12{
+    -moz-column-gap: 3rem;
+         column-gap: 3rem;
   }
 
   .lg\:px-6{
@@ -2112,6 +2234,16 @@ input[type="radio"]:checked ~ .box span{
   .lg\:px-8{
     padding-left: 2rem;
     padding-right: 2rem;
+  }
+
+  .lg\:py-7{
+    padding-top: 1.75rem;
+    padding-bottom: 1.75rem;
+  }
+
+  .lg\:px-4{
+    padding-left: 1rem;
+    padding-right: 1rem;
   }
 
   .lg\:pt-\[80px\]{
@@ -2140,10 +2272,6 @@ input[type="radio"]:checked ~ .box span{
 
   .lg\:pb-\[120px\]{
     padding-bottom: 120px;
-  }
-
-  .lg\:pl-\[120px\]{
-    padding-left: 120px;
   }
 
   .lg\:text-right{
@@ -2235,10 +2363,6 @@ input[type="radio"]:checked ~ .box span{
 
   .\32xl\:max-w-\[850px\]{
     max-width: 850px;
-  }
-
-  .\32xl\:pl-0{
-    padding-left: 0px;
   }
 
   .\32xl\:text-\[22px\]{
